Going for jsf 1.2 and 2.0 compatibility

--- a/gadlets-core/src/main/resources/org/gadlets/core/twitter.xhtml
+++ b/gadlets-core/src/main/resources/org/gadlets/core/twitter.xhtml
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition>
-	<script src="http://widgets.twimg.com/j/2/widget.js"></script>
+	<div><script src="http://widgets.twimg.com/j/2/widget.js"></script>
 	<script>
 		new TWTR.Widget({
 			version : 2,
@@ -34,6 +33,6 @@
 				behavior : 'all'
 			}
 		}).render().setUser('#{user}').start();
-	</script>
+	</script></div>
 </ui:composition>
 </html>
