--- a/gadlets-test/src/main/webapp/home.xhtml
+++ b/gadlets-test/src/main/webapp/home.xhtml
@@ -3,13 +3,16 @@
    xmlns:ui="http://java.sun.com/jsf/facelets"
    xmlns:f="http://java.sun.com/jsf/core"
    xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:g="http://gadlets.org/gadlets"
+   xmlns:g="http://gadlets.org/gadlets/core"
+   xmlns:gc="http://gadlets.org/gadlets/components"
    template="/WEB-INF/templates/default.xhtml">
    <ui:define name="content">
       <h1>Hello World!</h1>
       <p>Your CDI bean <code>HelloWorld</code> says <span style="color: blue;">#{helloWorld.text}</span> using the Unified EL.</p>
 
 	<g:gadlets />
+
+	<gc:gadletSettings />
 
       <h:form id="bv">
          <h2>Bean Validation examples</h2>
