--- a/gadlets-test/src/main/webapp/home.xhtml
+++ b/gadlets-test/src/main/webapp/home.xhtml
@@ -8,6 +8,11 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 
+		<g:gadlets name="twitter-twitter">
+			<ui:param name="user" value="jboss" />
+		</g:gadlets>
+
+
 		<h1>
 			Single gadlet <i>twitter-lola</i>
 		</h1>
