Added simple keyword handling and showcase

--- a/gadlets-test/src/main/webapp/home.xhtml
+++ b/gadlets-test/src/main/webapp/home.xhtml
@@ -26,6 +26,14 @@
 			<ui:param name="user" value="jboss" />
 		</g:gadlets>
 
+		<h1>
+			Single gadlet <i>twitter-lola</i> from keyword <i>keyword-lola</i>
+		</h1>
+		<g:gadlets name="twitter-twitter">
+			<ui:param name="keyword" value="keyword-lola" />
+		</g:gadlets>
+
+
 		<h1>All gadlets</h1>
 		<g:gadlets />
 
